@@ -48,6 +48,10 @@
       <para>October 10th, 2014</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Expand configuration for Cups.  Fixes 
+          <ulink url="&blfs-ticket-root;5628">#5628</ulink>.</para>
+        </listitem>
+        <listitem>
           <para>[fernando] - Update to Archive-Zip-1.38.  Fixes 
           <ulink url="&blfs-ticket-root;5639">#5639</ulink>.</para>
         </listitem>
